# NeuralNetworkStuff

./: .gitignore  CMakeLists.txt  README.md  main.cpp  matrix.cpp  matrix.h  pattern.cpp  pattern.h
combined_networks/: CMakeLists.txt  main.cpp  neural-network.cpp  neural-network.h
converging_pattern/: CMakeLists.txt  main.cpp
deterministic_hopfield_model/: CMakeLists.txt  main.cpp
include/: matrix.h  random.h
kohonen_network/: CMakeLists.txt  kohonen-network.cpp  kohonen-network.h  main.cpp
oja_unsupervised/: CMakeLists.txt  main.cpp  oja_etc.nb
plot_test/: CMakeLists.txt  main.cpp
stochastic_hopfield_model/: CMakeLists.txt  main.cpp
supervised_learning/: CMakeLists.txt  main.cpp  neural-network.cpp  neural-network.h
supervised_learning_hidden_layer/: CMakeLists.txt  main.cpp  neural-network.cpp  neural-network.h
